fixed spacing

--- a/css/stylesheet2.css
+++ b/css/stylesheet2.css
@@ -81,95 +81,3 @@ html, body {
 .ucsd-computer-image {
   width: 100%;
 }
-.ucsd-nav {
-  background-color: white;
-  padding: 0px 0px;
-  width: 100%;
-  position: fixed;
-  top: 0;
-  border-bottom: 1px solid #5c6772;
-  max-height: 50%;
-  overflow: hidden;
-}
-.ucsd-nav .icon {
-  color: #5c6772;
-  display: none;
-  text-decoration: none;
-  cursor: pointer;
-}
-@media screen and (max-width: 950px) {
-  .ucsd-nav-right a {display: none;}
-  .ucsd-nav a.icon {
-    float: right;
-    display: block;
-  }
-  a.icon:hover{
-    color: #040505;
-  }
-  
-}
-
-@media screen and (max-width: 950px) {
-  .ucsd-nav.responsive {position: right;}
-  .ucsd-nav.responsive .icon {
-    margin-right: 10px;
-    position: absolute;
-    right: 0;
-    top: 12px;
-  }
-  .ucsd-nav.responsive a {
-    margin-right: 22px;
-    position: right;
-    float: none;
-    display: block;
-    text-align: right;
-  }
-  .ucsd-nav.responsive .ucsd-logo{
-    min-width: 154%;
-  }
-}
-.ucsd-nav-left {
-  float: left;
-  max-width: 100px;
-}
-.ucsd-nav-right {
-  font-size: 28px;
-  float: right;
-  position: center;
-}
-.ucsd-nav-content {
-  margin: auto;
-  max-width: 1150px;
-  max-height: 100px;
-}
-.ucsd-nav-right {
-  list-style-type: block;
-  padding-left: 0;
-  /* Change location of bar in  nav bar*/
-  margin: 1.9%;
-}
-.ucsd-nav-right__item {
-  display: inline-block;
-}
-.ucsd-nav-right__item {
-  text-transform: uppercase;
-  font-size: 14px;
-  letter-spacing: 1px;
-  padding: 0 10px;
-  color: #5c6772;
-  cursor: pointer; /* Tells the browser that the cursor should be a pointer on hover */
-}
-.ucsd-nav-right__item:hover{
-  color:#040505;
-}
-.ucsd-nav-right__item .ucsd-button {
-  padding: 0 20px;
-  margin: 0 10px;
-  color: white;
-  height: 0px;
-}
-.ucsd-nav .ucsd-logo {
-  padding-top: 10px;
-  padding-left: 16px;
-  line-height: 36px;
-}
