--- a/css/stylesheet_head.css
+++ b/css/stylesheet_head.css
@@ -81,7 +81,7 @@ html, body {
   text-transform: uppercase;
   font-size: 14px;
   letter-spacing: 1px;
-  padding: 0 10px;
+  padding: 5px 10px;
   color: #5c6772;
   cursor: pointer; /* Tells the browser that the cursor should be a pointer on hover */
 }
